Fix Header Spacing

--- a/styles1.css
+++ b/styles1.css
@@ -97,7 +97,7 @@ h1{
 }
 
 #main-dog{
-	margin-bottom: 4em;
+	margin-bottom: 1em;
 }
 
 .dog-img{
